--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 <aside class="sidebar">
 	<div class="sidebar__holder">
 		<!--logo-->
-		<strong class="logo">
-			<a href="#">
-				<span class="logo__img">AZToys</span>
+		<div class="logo">
+			<span>
+				<strong class="logo__img">AZToys</strong>
 				<em class="logo__slogan">Children's learning "Azbook"</em>
-			</a>
+			</span>
 			<img style="display: none;" src="img/logo.png" alt="logo">
-		</strong>
+		</div>
 		<!--logo end-->
 		<!-- main navigation -->
 		<nav class="nav">
