--- a/all-pages.html
+++ b/all-pages.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
 <head>
 	<meta charset="UTF-8">
-	<title>AZToys - Products</title>
+	<title>AZToys - All pages</title>
 	<!--Mobile optimized-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,6 +24,10 @@
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
+
+<!--screen-->
+<div class="screen"><div class="screen__bg"></div></div>
+<!--screen end-->
 
 <!--SIDEBAR-->
 <aside class="sidebar">
@@ -85,164 +89,19 @@
 	<div class="main">
 		<!--CONTENT-->
 		<div class="content layout">
-			<div class="section-title"><h2>Products</h2></div>
-			<div class="products__list products">
-				<div class="products__item">
-					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
-						<div class="products__content">
-							<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
-							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
-							</dl>
-						</div>
-					</a>
+			<div class="max-wrap bg-content">
+				<div class="breadcrumbs full-width">
+					<ul class="breadcrumbs-list">
+						<li><a href="index.html">Home</a></li>
+						<li>All Pages</li>
+					</ul>
 				</div>
-				<div class="products__item">
-					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
-						<div class="products__content">
-							<h3 class="products__title">Baby Player Ladybird</h3>
-							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
-							</dl>
-						</div>
-					</a>
-				</div>
-				<div class="products__item">
-					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
-						<div class="products__content">
-							<h3 class="products__title">Baby Player Ladybird for education</h3>
-							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
-							</dl>
-						</div>
-					</a>
-				</div>
-				<div class="products__item">
-					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
-						<div class="products__content">
-							<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
-							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
-							</dl>
-						</div>
-					</a>
-				</div>
-				<div class="products__item">
-					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
-						<div class="products__content">
-							<h3 class="products__title">Baby Player Ladybird</h3>
-							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
-							</dl>
-						</div>
-					</a>
-				</div>
-				<div class="products__item">
-					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
-						<div class="products__content">
-							<h3 class="products__title">Baby Player Ladybird</h3>
-							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
-							</dl>
-						</div>
-					</a>
-				</div>
-				<div class="products__item">
-					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
-						<div class="products__content">
-							<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
-							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
-							</dl>
-						</div>
-					</a>
-				</div>
-				<div class="products__item">
-					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
-						<div class="products__content">
-							<h3 class="products__title">Baby Player Ladybird</h3>
-							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
-							</dl>
-						</div>
-					</a>
-				</div>
-				<div class="products__item">
-					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
-						<div class="products__content">
-							<h3 class="products__title">Baby Player Ladybird for education</h3>
-							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
-							</dl>
-						</div>
-					</a>
-				</div>
-				<div class="products__item">
-					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
-						<div class="products__content">
-							<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
-							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
-							</dl>
-						</div>
-					</a>
-				</div>
-				<div class="products__item">
-					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
-						<div class="products__content">
-							<h3 class="products__title">Baby Player Ladybird</h3>
-							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
-							</dl>
-						</div>
-					</a>
-				</div>
-				<div class="products__item">
-					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
-						<div class="products__content">
-							<h3 class="products__title">Baby Player Ladybird</h3>
-							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
-							</dl>
-						</div>
-					</a>
-				</div>
+				<div class="page-title"><h1>All Pages</h1></div>
+				<ol>
+					<li><a href="index.html" target="_blank"><span>Main page</span></a></li>
+					<li><a href="typography.html" target="_blank"><span>Typography</span></a></li>
+					<li><a href="typography.html" target="_blank"><span>Products</span></a></li>
+				</ol>
 			</div>
 		</div>
 		<!--CONTENT end-->
