--- a/elements.html
+++ b/elements.html
@@ -46,7 +46,7 @@
 			<!-- header holder -->
 			<div class="header-holder">
 				<!-- logo -->
-				<strong class="logo"><a href="#">New Prodject</a></strong>
+				<strong class="logo"><a href="index.html">New Prodject</a></strong>
 				<!-- logo end -->
 				<p>HEADER <br /><br /> Lorem ipsum dolor sit amet, <a href="#">link text</a> consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
 				<nav class="nav">
