--- a/typography.html
+++ b/typography.html
@@ -29,13 +29,13 @@
 <aside class="sidebar">
 	<div class="sidebar__holder">
 		<!--logo-->
-		<strong class="logo">
-			<a href="#">
-				<span class="logo__img">AZToys</span>
+		<div class="logo">
+			<a href="index.html">
+				<strong class="logo__img">AZToys</strong>
 				<em class="logo__slogan">Children's learning "Azbook"</em>
 			</a>
 			<img style="display: none;" src="img/logo.png" alt="logo">
-		</strong>
+		</div>
 		<!--logo end-->
 		<!-- main navigation -->
 		<nav class="nav">
@@ -91,7 +91,7 @@
 				<!--breadcrumbs-->
 				<div class="breadcrumbs full-width">
 					<ul class="breadcrumbs-list">
-						<li><a href="#">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="#">Category</a></li>
 						<li>Subcategory</li>
 					</ul>
