--- a/all-pages.html
+++ b/all-pages.html
@@ -38,7 +38,7 @@
 				<strong class="logo__img">AZToys</strong>
 				<em class="logo__slogan">Children's learning "Azbook"</em>
 			</a>
-			<img style="display: none;" src="img/logo.png" alt="logo">
+			<img style="display: none;" src="img1/logo.png" alt="logo">
 		</div>
 		<!--logo end-->
 		<!-- main navigation -->
@@ -146,7 +146,7 @@
 			</div>
 			<div class="footer-nav__col no-space">
 				<div class="soc-plug">
-					<img src="img/_temp_soc-plug.jpg" alt="image description" />
+					<img src="img1/_temp_soc-plug.jpg" alt="image description" />
 				</div>
 			</div>
 			<div class="footer-nav__col col-lg">
