--- a/products.html
+++ b/products.html
@@ -34,7 +34,7 @@
 				<strong class="logo__img">AZToys</strong>
 				<em class="logo__slogan">Children's learning "Azbook"</em>
 			</a>
-			<img style="display: none;" src="img/logo.png" alt="logo">
+			<img style="display: none;" src="img1/logo.png" alt="logo">
 		</div>
 		<!--logo end-->
 		<!-- main navigation -->
@@ -89,7 +89,7 @@
 			<div class="products__list products">
 				<div class="products__item">
 					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
+						<div class="products__img"><img src="img1/img-products-01.jpg" alt="image description" /></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 							<dl class="products__param">
@@ -102,7 +102,7 @@
 				</div>
 				<div class="products__item">
 					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
+						<div class="products__img"><img src="img1/img-products-02.jpg" alt="image description" /></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
@@ -115,7 +115,7 @@
 				</div>
 				<div class="products__item">
 					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
+						<div class="products__img"><img src="img1/img-products-03.jpg" alt="image description" /></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird for education</h3>
 							<dl class="products__param">
@@ -128,7 +128,7 @@
 				</div>
 				<div class="products__item">
 					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
+						<div class="products__img"><img src="img1/img-products-04.jpg" alt="image description" /></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
 							<dl class="products__param">
@@ -141,7 +141,7 @@
 				</div>
 				<div class="products__item">
 					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
+						<div class="products__img"><img src="img1/img-products-05.jpg" alt="image description" /></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
@@ -154,7 +154,7 @@
 				</div>
 				<div class="products__item">
 					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
+						<div class="products__img"><img src="img1/img-products-06.jpg" alt="image description" /></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
@@ -167,7 +167,7 @@
 				</div>
 				<div class="products__item">
 					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
+						<div class="products__img"><img src="img1/img-products-01.jpg" alt="image description" /></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 							<dl class="products__param">
@@ -180,7 +180,7 @@
 				</div>
 				<div class="products__item">
 					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
+						<div class="products__img"><img src="img1/img-products-02.jpg" alt="image description" /></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
@@ -193,7 +193,7 @@
 				</div>
 				<div class="products__item">
 					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
+						<div class="products__img"><img src="img1/img-products-03.jpg" alt="image description" /></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird for education</h3>
 							<dl class="products__param">
@@ -206,7 +206,7 @@
 				</div>
 				<div class="products__item">
 					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
+						<div class="products__img"><img src="img1/img-products-04.jpg" alt="image description" /></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
 							<dl class="products__param">
@@ -219,7 +219,7 @@
 				</div>
 				<div class="products__item">
 					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
+						<div class="products__img"><img src="img1/img-products-05.jpg" alt="image description" /></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
@@ -232,7 +232,7 @@
 				</div>
 				<div class="products__item">
 					<a href="#" class="products__inner">
-						<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
+						<div class="products__img"><img src="img1/img-products-06.jpg" alt="image description" /></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
@@ -287,7 +287,7 @@
 			</div>
 			<div class="footer-nav__col no-space">
 				<div class="soc-plug">
-					<img src="img/_temp_soc-plug.jpg" alt="image description" />
+					<img src="img1/_temp_soc-plug.jpg" alt="image description" />
 				</div>
 			</div>
 			<div class="footer-nav__col col-lg">
