--- a/typography.html
+++ b/typography.html
@@ -34,7 +34,7 @@
 				<strong class="logo__img">AZToys</strong>
 				<em class="logo__slogan">Children's learning "Azbook"</em>
 			</a>
-			<img style="display: none;" src="img1/logo.png" alt="logo">
+			<img style="display: none;" src="img/logo.png" alt="logo">
 		</div>
 		<!--logo end-->
 		<!-- main navigation -->
@@ -141,7 +141,7 @@
 				<h1><span style="color: #e61f00;">(h1)</span> The Road to Philly: DNC delegates turn to crowdfunding</h1>
 				<div class="clear"></div>
 				<div class="imgc full-width" style="text-align: center;">
-					<img src="img1/img-expl-lg.jpg" alt="image description">
+					<img src="img/img-expl-lg.jpg" alt="image description">
 				</div>
 				<h2><span style="color: #e61f00;">(h2)</span> Like their candidates, delegates to the convention are turning to the internet and social media to help raise money.</h2>
 				<div class="print-hidden" style="float: right; margin: 0 0 20px 40px; font-size: 13px; line-height: 18px;">
@@ -170,7 +170,7 @@
 					<p>Roberts isn't alone. Delegates are expected to foot the bill themselves, and attending the DNC is expensive. Organizers require delegates to stay at specific hotels that range in price from $300 to $600 a night, depending on how close they are to the convention center. Then there are flights, meals and the occasional tipple. Add it all up and being on hand for Hillary Clinton's crowning will likely cost many delegates more than $4,000.</p>
 				</div>
 				<div class="imgc">
-					<img src="img1/img-expl-sm.jpg" alt="image description">
+					<img src="img/img-expl-sm.jpg" alt="image description">
 				</div>
 				<p>Like many new graduates, Dallas Roberts wanted to celebrate the end of his studies at Western Washington University in Bellingham, Washington, with a trip. His proposed destination: Philadelphia, where he could attend the Democratic National Convention to support Bernie Sanders.</p>
 				<h2>De La Torre said she sold more than 800 tamales and met her goal
@@ -668,19 +668,19 @@
 				<!--form style end-->
 
 				<p>Душа моя озарена неземной радостью, как эти чудесные весенние утра, которыми я наслаждаюсь от всего сердца. Я совсем один и блаженствую в здешнем краю, словно созданном для таких, как я. Я так счастлив, мой друг, так упоен ощущением покоя, что искусство мое страдает от этого.</p>
-				<img class="imgl" src="img1/img-expl-sm.jpg" alt="image description" />
+				<img class="imgl" src="img/img-expl-sm.jpg" alt="image description" />
 				<p>Когда от милой моей долины поднимается пар и полдневное солнце стоит над непроницаемой чащей темного леса и лишь редкий луч проскальзывает в его святая святых, а я лежу в высокой траве у быстрого ручья и, прильнув к земле, вижу тысячи всевозможных былинок и чувствую, как близок моему сердцу крошечный мирок, что снует между стебельками, наблюдаю эти неисчислимые, непостижимые разновидности червяков и мошек и чувствую близость всемогущего, создавшего нас по своему подобию, веяние вселюбящего, судившего нам парить в вечном блаженстве, когда взор мой туманится и все вокруг меня и небо надо мной запечатлены в моей душе, точно образ возлюбленной, - тогда, дорогой друг, меня часто томит мысль: "Ах!</p>
 				<p>Как бы выразить, как бы вдохнуть в рисунок то, что так полно, так трепетно живет во мне, запечатлеть отражение моей души, как душа моя - отражение предвечного бога! " Друг мой. . . Но нет! Мне не под силу это, меня подавляет величие этих явлений.</p>
-				<img class="imgr" src="img1/img-expl-sm.jpg" alt="image description" />
+				<img class="imgr" src="img/img-expl-sm.jpg" alt="image description" />
 				<p>Когда от милой моей долины поднимается пар и полдневное солнце стоит над непроницаемой чащей темного леса и лишь редкий луч проскальзывает в его святая святых, а я лежу в высокой траве у быстрого ручья и, прильнув к земле, вижу тысячи всевозможных былинок и чувствую, как близок моему сердцу крошечный мирок, что снует между стебельками, наблюдаю эти неисчислимые, непостижимые разновидности червяков и мошек и чувствую близость всемогущего, создавшего нас по своему подобию, веяние вселюбящего, судившего нам парить в вечном блаженстве, когда взор мой туманится и все вокруг меня и небо надо мной запечатлены в моей душе, точно образ возлюбленной, - тогда, дорогой друг, меня часто томит мысль: "Ах!</p>
 				<p>Как бы выразить, как бы вдохнуть в рисунок то, что так полно, так трепетно живет во мне, запечатлеть отражение моей души, как душа моя - отражение предвечного бога! " Друг мой. . . Но нет! Мне не под силу это, меня подавляет величие этих явлений.</p>
 				<div class="imgc">
-					<img src="img1/img-expl-sm.jpg" alt="image description" />
+					<img src="img/img-expl-sm.jpg" alt="image description" />
 				</div>
 				<p>Когда от милой моей долины поднимается пар и полдневное солнце стоит над непроницаемой чащей темного леса и лишь редкий луч проскальзывает в его святая святых, а я лежу в высокой траве у быстрого ручья и, прильнув к земле, вижу тысячи всевозможных былинок и чувствую, как близок моему сердцу крошечный мирок, что снует между стебельками, наблюдаю эти неисчислимые, непостижимые разновидности червяков и мошек и чувствую близость всемогущего, создавшего нас по своему подобию, веяние вселюбящего, судившего нам парить в вечном блаженстве, когда взор мой туманится и все вокруг меня и небо надо мной запечатлены в моей душе, точно образ возлюбленной, - тогда, дорогой друг, меня часто томит мысль: "Ах!</p>
 				<p>Как бы выразить, как бы вдохнуть в рисунок то, что так полно, так трепетно живет во мне, запечатлеть отражение моей души, как душа моя - отражение предвечного бога! " Друг мой. . . Но нет! Мне не под силу это, меня подавляет величие этих явлений.</p>
 				<div class="imgc">
-					<img src="img1/img-expl-lg.jpg" alt="image description" />
+					<img src="img/img-expl-lg.jpg" alt="image description" />
 				</div>
 				<p>Как бы выразить, как бы вдохнуть в рисунок то, что так полно, так трепетно живет во мне, запечатлеть отражение моей души, как душа моя - отражение предвечного бога! " Друг мой. . . Но нет! Мне не под силу это, меня подавляет величие этих явлений.</p>
 				<!--more-->
