--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
 			<section class="video-section">
 				<h2>Watch our video</h2>
 				<div class="video-slider">
-					<img src="img/_temp_img-video-slide.jpg" alt="image description" />
+					<img src="img/temp_img-video-slide.jpg" alt="image description" />
 				</div>
 				<div class="buttons"><a href="#" class="btn-default">All video</a></div>
 			</section>
@@ -676,7 +676,7 @@
 			</div>
 			<div class="footer-nav__col no-space">
 				<div class="soc-plug">
-					<img src="img/_temp_soc-plug.jpg" alt="image description" />
+					<img src="img/temp_soc-plug.jpg" alt="image description" />
 				</div>
 			</div>
 			<div class="footer-nav__col col-lg">
