--- a/products.html
+++ b/products.html
@@ -287,7 +287,7 @@
 			</div>
 			<div class="footer-nav__col no-space">
 				<div class="soc-plug">
-					<img src="img/_temp_soc-plug.jpg" alt="image description" />
+					<img src="img/temp_soc-plug.jpg" alt="image description" />
 				</div>
 			</div>
 			<div class="footer-nav__col col-lg">
