--- a/all-pages.html
+++ b/all-pages.html
@@ -100,7 +100,7 @@
 				<ol>
 					<li><a href="index.html" target="_blank"><span>Main page</span></a></li>
 					<li><a href="typography.html" target="_blank"><span>Typography</span></a></li>
-					<li><a href="typography.html" target="_blank"><span>Products</span></a></li>
+					<li><a href="products.html" target="_blank"><span>Products</span></a></li>
 				</ol>
 			</div>
 		</div>
