--- a/elements.html
+++ b/elements.html
@@ -82,11 +82,50 @@
 			<div class="example-set-icons">
 				<h2>Icon</h2>
 				<ul>
+					<li><i class="depict-search"></i></li>
+					<li><i class="depict-search-h"></i></li>
+					<li><i class="depict-search-active"></i></li>
+					<li><i class="depict-angle"></i></li>
+					<li><i class="depict-angle-h"></i></li>
+					<li><i class="depict-clear"></i></li>
+					<li><i class="depict-clear-h"></i></li>
+					<li><i class="depict-check"></i></li>
+					<li><i class="depict-check-disabled"></i></li>
+					<li><i class=""></i></li>
+				</ul>
+
+				<h2>Skills Icons</h2>
+				<ul>
+					<li><i class="depict-skills-01"></i></li>
+					<li><i class="depict-skills-02"></i></li>
+					<li><i class="depict-skills-03"></i></li>
+					<li><i class="depict-skills-04"></i></li>
+					<li><i class="depict-skills-05"></i></li>
+					<li><i class="depict-skills-06"></i></li>
+					<li><i class="depict-skills-07"></i></li>
+					<li><i class="depict-skills-08"></i></li>
+					<li><i class="depict-skills-09"></i></li>
+					<li><i class="depict-skills-10"></i></li>
+					<li><i class="depict-skills-11"></i></li>
+					<li><i class="depict-skills-12"></i></li>
+					<li><i class="depict-skills-13"></i></li>
+					<li><i class="depict-skills-14"></i></li>
+					<li><i class="depict-skills-15"></i></li>
+					<li><i class="depict-skills-16"></i></li>
 					<li><i class=""></i></li>
 				</ul>
 
 				<h2>Social Icons</h2>
 				<ul>
+					<li><i class="soc-depict-fb"></i></li>
+					<li><i class="soc-depict-fb-blue"></i></li>
+					<li><i class="soc-depict-fb-h"></i></li>
+					<li><i class="soc-depict-tw"></i></li>
+					<li><i class="soc-depict-tw-blue"></i></li>
+					<li><i class="soc-depict-tw-h"></i></li>
+					<li><i class="soc-depict-yt"></i></li>
+					<li><i class="soc-depict-yt-blue"></i></li>
+					<li><i class="soc-depict-yt-h"></i></li>
 					<li><i class=""></i></li>
 				</ul>
 
