--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@
 	<!--Modernizr-->
 	<script src="js/vendor/modernizr-3.3.1.custom.min.js"></script>
 </head>
-<body class="home-page">
+<body class="products-page">
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -81,21 +81,21 @@
 
 <!--FILTERS-->
 <div class="filters">
-	<div class="filters__panel layout">
+	<div class="filters__panel">
 		<div class="filters__panel-holder">
 			<div class="filters__group">
-				<div class="button-group filters-button-group">
+				<div class="tags-group filters-tags-js button-group-js" data-tags-group="age">
 					<span class="filters__label">Age:</span>
-					<button class="button" data-filter=".younger">2-3</button>
-					<button class="button" data-filter=".middle">4-5</button>
-					<button class="button" data-filter=".senior">6+</button>
+					<a href="#" class="button" data-filter=".tag-younger">2-3</a>
+					<a href="#" class="button" data-filter=".tag-middle">4-5</a>
+					<a href="#" class="button" data-filter=".tag-senior">6+</a>
 				</div>
 			</div>
 			<div class="filters__group">
-				<div class="button-group filters-button-group filters-button-middle">
-					<button class="button" data-filter=".new">New</button>
-					<button class="button" data-filter=".popular">Popular</button>
-					<button class="button" data-filter=".exclusive">Exclusive</button>
+				<div class="tags-group filters-tags-js button-group-js filters-button-middle" data-tags-group="state">
+					<a href="#" class="button" data-filter=".tag-new">New</a>
+					<a href="#" class="button" data-filter=".tag-popular">Popular</a>
+					<a href="#" class="button" data-filter=".tag-exclusive">Exclusive</a>
 				</div>
 			</div>
 			<div class="filters__group has-drop">
@@ -105,42 +105,42 @@
 					<div class="filters-drop__holder">
 						<div class="filters-drop__group">
 							<strong class="filters-drop__title">Category:</strong>
-							<ul class="filters-drop__list">
-								<li><a href="#"><span>Educational Toys</span></a></li>
-								<li><a href="#"><span>Sound and Music Toys</span></a></li>
-								<li><a href="#"><span>Art and Craft Kits</span></a></li>
-								<li><a href="#"><span>Toy Tablets</span></a></li>
-								<li><a href="#"><span>Tablets with Touch Screen</span></a></li>
-								<li><a href="#"><span>Toy Smartphones</span></a></li>
-								<li><a href="#"><span>Smart Watches</span></a></li>
-								<li><a href="#"><span>Microphones</span></a></li>
-								<li><a href="#"><span>Consoles</span></a></li>
-								<li><a href="#"><span>Sound Mats</span></a></li>
-								<li><a href="#"><span>Sound Models and Sets</span></a></li>
-								<li><a href="#"><span>Educational Cards</span></a></li>
-								<li><a href="#"><span>Puzzle Elements</span></a></li>
-								<li><a href="#"><span>Sticker Elements</span></a></li>
+							<ul class="filters-drop__list filters-tags-js">
+								<li><a href="#" data-filter=".tag-educational"><span>Educational Toys</span></a></li>
+								<li><a href="#" data-filter=".tag-music"><span>Sound and Music Toys</span></a></li>
+								<li><a href="#" data-filter=".tag-art"><span>Art and Craft Kits</span></a></li>
+								<li><a href="#" data-filter=".tag-tablet"><span>Toy Tablets</span></a></li>
+								<li><a href="#" data-filter=".tag-touch"><span>Tablets with Touch Screen</span></a></li>
+								<li><a href="#" data-filter=".tag-smartphone"><span>Toy Smartphones</span></a></li>
+								<li><a href="#" data-filter=".tag-smart-watch"><span>Smart Watches</span></a></li>
+								<li><a href="#" data-filter=".tag-microphone"><span>Microphones</span></a></li>
+								<li><a href="#" data-filter=".tag-console"><span>Consoles</span></a></li>
+								<li><a href="#" data-filter=".tag-sound-mat"><span>Sound Mats</span></a></li>
+								<li><a href="#" data-filter=".tag-set"><span>Sound Models and Sets</span></a></li>
+								<li><a href="#" data-filter=".tag-educational-card"><span>Educational Cards</span></a></li>
+								<li><a href="#" data-filter=".tag-puzzle"><span>Puzzle Elements</span></a></li>
+								<li><a href="#" data-filter=".tag-sticker"><span>Sticker Elements</span></a></li>
 							</ul>
 						</div>
 						<div class="filters-drop__group">
 							<strong class="filters-drop__title">Skills:</strong>
-							<ul class="filters-drop__list">
-								<li><a href="#"><i class="depict-skills-01"></i><span>Physical skills</span></a></li>
-								<li><a href="#"><i class="depict-skills-02"></i><span>Cognitive skills</span></a></li>
-								<li><a href="#"><i class="depict-skills-03"></i><span>Imagination develop.</span></a></li>
-								<li><a href="#"><i class="depict-skills-04"></i><span>Speech and language</span></a></li>
-								<li><a href="#"><i class="depict-skills-05"></i><span>Hand-eye coordination</span></a></li>
-								<li><a href="#"><i class="depict-skills-06"></i><span>Problem-solving skills</span></a></li>
-								<li><a href="#"><i class="depict-skills-07"></i><span>Self-development skills</span></a></li>
-								<li><a href="#"><i class="depict-skills-08"></i><span>Math skills</span></a></li>
-								<li><a href="#"><i class="depict-skills-09"></i><span>Musical ability</span></a></li>
-								<li><a href="#"><i class="depict-skills-10"></i><span>Sensory abilities</span></a></li>
-								<li><a href="#"><i class="depict-skills-11"></i><span>Reading skills</span></a></li>
-								<li><a href="#"><i class="depict-skills-12"></i><span>Social skills</span></a></li>
-								<li><a href="#"><i class="depict-skills-13"></i><span>Visual memory develop.</span></a></li>
-								<li><a href="#"><i class="depict-skills-14"></i><span>Logical thinking skills</span></a></li>
-								<li><a href="#"><i class="depict-skills-15"></i><span>Research skills</span></a></li>
-								<li><a href="#"><i class="depict-skills-16"></i><span>Writing skills</span></a></li>
+							<ul class="filters-drop__list filters-tags-js">
+								<li><a href="#" data-filter=".tag-physical"><i class="depict-skills-01"></i><span>Physical skills</span></a></li>
+								<li><a href="#" data-filter=".tag-cognitive"><i class="depict-skills-02"></i><span>Cognitive skills</span></a></li>
+								<li><a href="#" data-filter=".tag-imagination"><i class="depict-skills-03"></i><span>Imagination develop.</span></a></li>
+								<li><a href="#" data-filter=".tag-speech"><i class="depict-skills-04"></i><span>Speech and language</span></a></li>
+								<li><a href="#" data-filter=".tag-hand-eye"><i class="depict-skills-05"></i><span>Hand-eye coordination</span></a></li>
+								<li><a href="#" data-filter=".tag-problem-solving"><i class="depict-skills-06"></i><span>Problem-solving skills</span></a></li>
+								<li><a href="#" data-filter=".tag-self-development"><i class="depict-skills-07"></i><span>Self-development skills</span></a></li>
+								<li><a href="#" data-filter=".tag-math"><i class="depict-skills-08"></i><span>Math skills</span></a></li>
+								<li><a href="#" data-filter=".tag-musical"><i class="depict-skills-09"></i><span>Musical ability</span></a></li>
+								<li><a href="#" data-filter=".tag-sensory"><i class="depict-skills-10"></i><span>Sensory abilities</span></a></li>
+								<li><a href="#" data-filter=".tag-reading"><i class="depict-skills-11"></i><span>Reading skills</span></a></li>
+								<li><a href="#" data-filter=".tag-social"><i class="depict-skills-12"></i><span>Social skills</span></a></li>
+								<li><a href="#" data-filter=".tag-visual-memory"><i class="depict-skills-13"></i><span>Visual memory develop.</span></a></li>
+								<li><a href="#" data-filter=".tag-logical"><i class="depict-skills-14"></i><span>Logical thinking skills</span></a></li>
+								<li><a href="#" data-filter=".tag-research"><i class="depict-skills-15"></i><span>Research skills</span></a></li>
+								<li><a href="#" data-filter=".tag-writing"><i class="depict-skills-16"></i><span>Writing skills</span></a></li>
 							</ul>
 						</div>
 					</div>
@@ -148,9 +148,8 @@
 				<!--filters drop end-->
 			</div>
 			<div class="filters__group">
-				<div class="button-group filters-button-group">
-					<button class="button clear-filter" data-filter="*"><i class="depict-clear"></i><span>Clear filter</span></button>
-				</div>
+				<div class="filters__counter filters-counter-js"></div>
+				<a href="#" class="button clear-filter disabled"><i class="depict-clear"></i><span>Clear filter</span></a>
 			</div>
 			<div class="filters__group">
 				<div class="search-form">
@@ -165,7 +164,6 @@
 					</form>
 				</div>
 			</div>
-
 		</div>
 	</div>
 </div>
@@ -178,8 +176,8 @@
 		<!--CONTENT-->
 		<div class="content layout">
 			<div class="section-title"><h2>Products</h2></div>
-			<div class="products__list products popular">
-				<div class="products__item younger">
+			<div class="products__list products">
+				<div class="products__item tag-younger tag-educational tag-music tag-set tag-puzzle">
 					<a href="#" class="products__inner">
 						<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
 						<div class="products__content">
@@ -192,7 +190,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="products__item middle new">
+				<div class="products__item tag-middle tag-new tag-educational tag-music tag-music tag-art">
 					<a href="#" class="products__inner">
 						<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
 						<div class="products__content">
@@ -205,7 +203,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="products__item younger new">
+				<div class="products__item tag-younger tag-new tag-music tag-educational-card">
 					<a href="#" class="products__inner">
 						<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
 						<div class="products__content">
@@ -218,7 +216,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="products__item senior popular">
+				<div class="products__item tag-senior tag-popular tag-educational tag-art tag-educational-card">
 					<a href="#" class="products__inner">
 						<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
 						<div class="products__content">
@@ -231,7 +229,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="products__item middle">
+				<div class="products__item tag-middle tag-popular tag-tablet tag-sticker">
 					<a href="#" class="products__inner">
 						<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
 						<div class="products__content">
@@ -244,7 +242,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="products__item senior new">
+				<div class="products__item tag-senior tag-new tag-educational tag-music tag-smartphone tag-sticker">
 					<a href="#" class="products__inner">
 						<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
 						<div class="products__content">
@@ -257,7 +255,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="products__item middle exclusive">
+				<div class="products__item tag-middle tag-exclusive tag-educational tag-tablet tag-touch">
 					<a href="#" class="products__inner">
 						<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
 						<div class="products__content">
@@ -270,7 +268,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="products__item senior exclusive">
+				<div class="products__item tag-senior tag-exclusive tag-educational tag-smartphone">
 					<a href="#" class="products__inner">
 						<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
 						<div class="products__content">
@@ -283,7 +281,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="products__item middle exclusive">
+				<div class="products__item tag-middle tag-exclusive tag-smartphone tag-sticker">
 					<a href="#" class="products__inner">
 						<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
 						<div class="products__content">
@@ -296,7 +294,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="products__item senior">
+				<div class="products__item tag-senior tag-smart-watch tag-microphone">
 					<a href="#" class="products__inner">
 						<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
 						<div class="products__content">
@@ -309,7 +307,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="products__item middle">
+				<div class="products__item tag-middle tag-microphone tag-educational-card">
 					<a href="#" class="products__inner">
 						<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
 						<div class="products__content">
@@ -322,7 +320,85 @@
 						</div>
 					</a>
 				</div>
-				<div class="products__item senior">
+				<div class="products__item tag-senior tag-exclusive tag-educational tag-smart-watch">
+					<a href="#" class="products__inner">
+						<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
+						<div class="products__content">
+							<h3 class="products__title">Baby Player Ladybird</h3>
+							<dl class="products__param">
+								<dt>Category:</dt> <dd>Learn</dd>
+								<dt>Skills:</dt> <dd>Memory</dd>
+								<dt>Age:</dt> <dd>5-7 years</dd>
+							</dl>
+						</div>
+					</a>
+				</div>
+				<div class="products__item tag-younger tag-educational tag-smart-watch tag-set">
+					<a href="#" class="products__inner">
+						<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
+						<div class="products__content">
+							<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
+							<dl class="products__param">
+								<dt>Category:</dt> <dd>Learn</dd>
+								<dt>Skills:</dt> <dd>Memory</dd>
+								<dt>Age:</dt> <dd>5-7 years</dd>
+							</dl>
+						</div>
+					</a>
+				</div>
+				<div class="products__item tag-middle tag-new tag-educational tag-art tag-console tag-puzzle">
+					<a href="#" class="products__inner">
+						<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
+						<div class="products__content">
+							<h3 class="products__title">Baby Player Ladybird</h3>
+							<dl class="products__param">
+								<dt>Category:</dt> <dd>Learn</dd>
+								<dt>Skills:</dt> <dd>Memory</dd>
+								<dt>Age:</dt> <dd>5-7 years</dd>
+							</dl>
+						</div>
+					</a>
+				</div>
+				<div class="products__item tag-younger tag-new tag-educational tag-console tag-sound-mat">
+					<a href="#" class="products__inner">
+						<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
+						<div class="products__content">
+							<h3 class="products__title">Baby Player Ladybird for education</h3>
+							<dl class="products__param">
+								<dt>Category:</dt> <dd>Learn</dd>
+								<dt>Skills:</dt> <dd>Memory</dd>
+								<dt>Age:</dt> <dd>5-7 years</dd>
+							</dl>
+						</div>
+					</a>
+				</div>
+				<div class="products__item tag-senior tag-popular tag-sound-mat tag-sticker">
+					<a href="#" class="products__inner">
+						<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
+						<div class="products__content">
+							<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
+							<dl class="products__param">
+								<dt>Category:</dt> <dd>Learn</dd>
+								<dt>Skills:</dt> <dd>Memory</dd>
+								<dt>Age:</dt> <dd>5-7 years</dd>
+							</dl>
+						</div>
+					</a>
+				</div>
+				<div class="products__item tag-middle tag-popular tag-educational tag-sound-mat tag-puzzle">
+					<a href="#" class="products__inner">
+						<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
+						<div class="products__content">
+							<h3 class="products__title">Baby Player Ladybird</h3>
+							<dl class="products__param">
+								<dt>Category:</dt> <dd>Learn</dd>
+								<dt>Skills:</dt> <dd>Memory</dd>
+								<dt>Age:</dt> <dd>5-7 years</dd>
+							</dl>
+						</div>
+					</a>
+				</div>
+				<div class="products__item tag-senior tag-new tag-educational tag-music tag-console">
 					<a href="#" class="products__inner">
 						<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
 						<div class="products__content">
