--- a/elements.html
+++ b/elements.html
@@ -91,6 +91,8 @@
 					<li><i class="depict-clear-h"></i></li>
 					<li><i class="depict-check"></i></li>
 					<li><i class="depict-check-disabled"></i></li>
+					<li><i class="depict-load"></i></li>
+					<li><i class="depict-load-h"></i></li>
 					<li><i class=""></i></li>
 				</ul>
 
@@ -126,6 +128,9 @@
 					<li><i class="soc-depict-yt"></i></li>
 					<li><i class="soc-depict-yt-blue"></i></li>
 					<li><i class="soc-depict-yt-h"></i></li>
+					<li><i class="soc-depict-share"></i></li>
+					<li><i class="soc-depict-share-h"></i></li>
+					<li><i class="soc-depict-share-a"></i></li>
 					<li><i class=""></i></li>
 				</ul>
 
