--- a/products.html
+++ b/products.html
@@ -174,7 +174,7 @@
 	<!--MAIN-->
 	<div class="main">
 		<!--CONTENT-->
-		<div class="content layout">
+		<div class="content user-content layout">
 			<div class="section-title"><h2>Products</h2></div>
 			<div class="products__list products">
 				<div class="products__item tag-younger tag-educational tag-music tag-set tag-puzzle">
