--- a/typography.html
+++ b/typography.html
@@ -20,7 +20,7 @@
 	<!--Modernizr-->
 	<script src="js/vendor/modernizr-3.3.1.custom.min.js"></script>
 </head>
-<body>
+<body class="text-page">
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -100,35 +100,35 @@
 
 				<!--social-->
 				<div class="soc full-width">
-					<ul class="soc__list">
+					<ul class="soc-list">
 						<li class="soc-facebook">
 							<a href="#">
 								facebook
-								<span class="soc__icons">
+								<span class="soc-icons">
 									<i class="soc-depict-fb-blue"></i>
 									<i class="soc-depict-fb-h"></i>
 								</span>
-								<em class="soc__count">15</em>
+								<em class="soc-count">15</em>
 							</a>
 						</li>
 						<li class="soc-twitter">
 							<a href="#">
 								twitter
-								<span class="soc__icons">
+								<span class="soc-icons">
 									<i class="soc-depict-tw-blue"></i>
 									<i class="soc-depict-tw-h"></i>
 								</span>
-								<em class="soc__count">112</em>
+								<em class="soc-count">112</em>
 							</a>
 						</li>
 						<li class="soc-youtube">
 							<a href="#">
 								vk
-								<span class="soc__icons">
+								<span class="soc-icons">
 									<i class="soc-depict-yt-blue"></i>
 									<i class="soc-depict-yt-h"></i>
 								</span>
-								<em class="soc__count">7</em>
+								<em class="soc-count">7</em>
 							</a>
 						</li>
 					</ul>
@@ -698,6 +698,7 @@
 		<!--CONTENT end-->
 	</div>
 	<!--MAIN end-->
+	<div class="spacer"></div>
 </div>
 <!--WRAPPER end-->
 
