--- a/news.html
+++ b/news.html
@@ -280,9 +280,12 @@
 			<!--news end-->
 
 			<!--load more-->
-			<div class="load-more animate">
-				<span class="load-more__icon"><i class="depict-load"></i></span>
-				<strong>Load more</strong>
+			<div class="load-more">
+				<!--add class "animate" that icon rotate-->
+				<a href="#" class="btn-more">
+					<span class="load-more__icon"><i class="depict-load"></i></span>
+					<strong>Load more</strong>
+				</a>
 			</div>
 			<!--load more end-->
 		</div>
@@ -321,6 +324,8 @@
 <!--<![endif]-->
 <!--JQuery UI-->
 <script src="js/vendor/jquery-ui.min.js"></script>
+<!--TweenMax-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
 <!--Widgets-->
 <script src="js/widgets.js"></script>
 <!--Main functions-->
