--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
 <head>
 	<meta charset="UTF-8">
-	<title>AZToys - All pages</title>
+	<title>AZToys - Contacts</title>
 	<!--Mobile optimized-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -20,7 +20,7 @@
 	<!--Modernizr-->
 	<script src="js/vendor/modernizr-3.3.1.custom.min.js"></script>
 </head>
-<body class="home-page">
+<body>
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -34,10 +34,10 @@
 	<div class="sidebar__holder">
 		<!--logo-->
 		<div class="logo">
-			<a href="index.html">
+			<span>
 				<strong class="logo__img">AZToys</strong>
 				<em class="logo__slogan">Children's learning "Azbook"</em>
-			</a>
+			</span>
 			<img style="display: none;" src="img/logo.png" alt="logo">
 		</div>
 		<!--logo end-->
@@ -143,21 +143,7 @@
 	<div class="main">
 		<!--CONTENT-->
 		<div class="content layout">
-			<div class="max-wrap bg-content">
-				<div class="breadcrumbs full-width">
-					<ul class="breadcrumbs-list">
-						<li><a href="index.html">Home</a></li>
-						<li>All Pages</li>
-					</ul>
-				</div>
-				<div class="page-title"><h1>All Pages</h1></div>
-				<ol>
-					<li><a href="index.html" target="_blank"><span>Main page</span></a></li>
-					<li><a href="typography.html" target="_blank"><span>Typography</span></a></li>
-					<li><a href="products.html" target="_blank"><span>Products</span></a></li>
-					<li><a href="news.html" target="_blank"><span>News</span></a></li>
-				</ol>
-			</div>
+			sdfdsf
 		</div>
 		<!--CONTENT end-->
 	</div>
