--- a/contacts.html
+++ b/contacts.html
@@ -143,7 +143,57 @@
 	<div class="main">
 		<!--CONTENT-->
 		<div class="content layout">
-			sdfdsf
+			<div class="contacts">
+				<div class="contacts__holder">
+					<div class="contacts-slider"></div>
+					<div class="contacts-form is-validate">
+						<form action="#" method="get">
+							<input type="text" placeholder="First name">
+							<input type="text" placeholder="Last name">
+							<input type="email" placeholder="E-mail">
+							<input type="email" placeholder="Phone">
+							<div class="select">
+								<select class="cselect" name="country">
+									<option value="1">Country</option>
+									<option value="2">Option</option>
+									<option value="3">Option long</option>
+									<option value="4">Option very very very very very very very long</option>
+									<option value="2">Option</option>
+									<option value="3">Option long</option>
+									<option value="4">Option very very very very very very very long</option>
+									<option value="2">Option</option>
+									<option value="3">Option long</option>
+									<option value="4">Option very very very very very very very long</option>
+									<option value="2">Option</option>
+									<option value="3">Option long</option>
+									<option value="4">Option very very very very very very very long</option>
+								</select>
+							</div>
+							<div class="select">
+								<select class="cselect" name="subject-of-enquiry">
+									<option value="1">Subject of enquiry</option>
+									<option value="2">Option</option>
+									<option value="3">Option long</option>
+									<option value="4">Option very very very very very very very long</option>
+									<option value="2">Option</option>
+									<option value="3">Option long</option>
+									<option value="4">Option very very very very very very very long</option>
+									<option value="2">Option</option>
+									<option value="3">Option long</option>
+									<option value="4">Option very very very very very very very long</option>
+									<option value="2">Option</option>
+									<option value="3">Option long</option>
+									<option value="4">Option very very very very very very very long</option>
+								</select>
+							</div>
+							<textarea placeholder="Your message"></textarea>
+							<div class="form-buttons">
+								<input type="submit" value="send">
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
 		</div>
 		<!--CONTENT end-->
 	</div>
