--- a/typography.html
+++ b/typography.html
@@ -636,7 +636,7 @@
 							<div class="label-holder">
 								<label for="expl-label-04">Текстовое поле второе: <span class="form-mark">*</span></label>
 							</div>
-							<input type="text" class="input-complete" placeholder="Текстовое поле второе" value="Charlie" id="expl-label-04" />
+							<input type="text" placeholder="Текстовое поле второе" value="Charlie" id="expl-label-04" />
 						</div>
 					</div>
 					<div class="form-row">
@@ -656,15 +656,12 @@
 									<option value="2">Option</option>
 									<option value="3">Option long</option>
 									<option value="4">Option very very very very very very very long</option>
-									<option value="1">Subject of enquiry</option>
 									<option value="2">Option</option>
 									<option value="3">Option long</option>
 									<option value="4">Option very very very very very very very long</option>
-									<option value="1">Subject of enquiry</option>
 									<option value="2">Option</option>
 									<option value="3">Option long</option>
 									<option value="4">Option very very very very very very very long</option>
-									<option value="1">Subject of enquiry</option>
 									<option value="2">Option</option>
 									<option value="3">Option long</option>
 									<option value="4">Option very very very very very very very long</option>
