--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@
 	<!--Modernizr-->
 	<script src="js/vendor/modernizr-3.3.1.custom.min.js"></script>
 </head>
-<body class="products-page">
+<body>
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -224,7 +224,7 @@
 <!--FILTERS end-->
 
 <!--WRAPPER-->
-<div class="wrapper">
+<div class="wrapper products-page">
 	<!--MAIN-->
 	<div class="main">
 		<!--CONTENT-->
