--- a/contacts.html
+++ b/contacts.html
@@ -143,57 +143,86 @@
 	<div class="main">
 		<!--CONTENT-->
 		<div class="content layout">
+			<!--contacts-->
 			<div class="contacts">
 				<div class="contacts__holder">
-					<div class="contacts-slider"></div>
-					<div class="contacts-form is-validate">
-						<form action="#" method="get">
-							<input type="text" placeholder="First name">
-							<input type="text" placeholder="Last name">
-							<input type="email" placeholder="E-mail">
-							<input type="email" placeholder="Phone">
-							<div class="select">
-								<select class="cselect" name="country">
-									<option value="1">Country</option>
-									<option value="2">Option</option>
-									<option value="3">Option long</option>
-									<option value="4">Option very very very very very very very long</option>
-									<option value="2">Option</option>
-									<option value="3">Option long</option>
-									<option value="4">Option very very very very very very very long</option>
-									<option value="2">Option</option>
-									<option value="3">Option long</option>
-									<option value="4">Option very very very very very very very long</option>
-									<option value="2">Option</option>
-									<option value="3">Option long</option>
-									<option value="4">Option very very very very very very very long</option>
-								</select>
+					<div class="contacts__frame">
+						<!--locate-->
+						<div class="locate">
+							<ul class="locate-controls">
+								<li><a href="#"><span>New York</span></a></li>
+								<li><a href="#"><span></span>Estonia</a></li>
+							</ul>
+							<div class="see-on-map">
+								<a href="#">See on map <i class="depict-pin"></i></a>
 							</div>
-							<div class="select">
-								<select class="cselect" name="subject-of-enquiry">
-									<option value="1">Subject of enquiry</option>
-									<option value="2">Option</option>
-									<option value="3">Option long</option>
-									<option value="4">Option very very very very very very very long</option>
-									<option value="2">Option</option>
-									<option value="3">Option long</option>
-									<option value="4">Option very very very very very very very long</option>
-									<option value="2">Option</option>
-									<option value="3">Option long</option>
-									<option value="4">Option very very very very very very very long</option>
-									<option value="2">Option</option>
-									<option value="3">Option long</option>
-									<option value="4">Option very very very very very very very long</option>
-								</select>
+							<div class="locate-slider">
+								<div class="contacts-slide">
+									<div class="locate-slide__bg" style="background-image: url(img/img-contacts-01.jpg)"></div>
+									<div class="locate__address">
+										29 Grange Rd Cheltenham <br>
+										Melbourne VIC 3192 AUSTRALIA <br>
+										Facsimile (+61) 03 9579 7355
+									</div>
+									<div class="locate__tel"><span>03 9579 7377</span></div>
+									<div class="locate__email"><a href="mailto:info@aztoys.com">info@aztoys.com</a></div>
+								</div>
 							</div>
-							<textarea placeholder="Your message"></textarea>
-							<div class="form-buttons">
-								<input type="submit" value="send">
-							</div>
-						</form>
+						</div>
+						<!--locate end-->
 					</div>
 				</div>
+				<!--contacts form-->
+				<div class="contacts-form is-validate">
+					<h3>Enquiry form</h3>
+					<form action="#" method="get">
+						<input type="text" placeholder="First name">
+						<input type="text" placeholder="Last name">
+						<input type="email" placeholder="E-mail">
+						<input type="email" placeholder="Phone">
+						<div class="select">
+							<select class="cselect" name="country">
+								<option value="1">Country</option>
+								<option value="2">Option</option>
+								<option value="3">Option long</option>
+								<option value="4">Option very very very very very very very long</option>
+								<option value="2">Option</option>
+								<option value="3">Option long</option>
+								<option value="4">Option very very very very very very very long</option>
+								<option value="2">Option</option>
+								<option value="3">Option long</option>
+								<option value="4">Option very very very very very very very long</option>
+								<option value="2">Option</option>
+								<option value="3">Option long</option>
+								<option value="4">Option very very very very very very very long</option>
+							</select>
+						</div>
+						<div class="select">
+							<select class="cselect" name="subject-of-enquiry">
+								<option value="1">Subject of enquiry</option>
+								<option value="2">Option</option>
+								<option value="3">Option long</option>
+								<option value="4">Option very very very very very very very long</option>
+								<option value="2">Option</option>
+								<option value="3">Option long</option>
+								<option value="4">Option very very very very very very very long</option>
+								<option value="2">Option</option>
+								<option value="3">Option long</option>
+								<option value="4">Option very very very very very very very long</option>
+								<option value="2">Option</option>
+								<option value="3">Option long</option>
+								<option value="4">Option very very very very very very very long</option>
+							</select>
+						</div>
+						<textarea placeholder="Your message"></textarea>
+						<div class="form-buttons">
+							<input type="submit" value="send">
+						</div>
+					</form>
+				</div>
+				<!--contacts form end-->
 			</div>
+			<!--contacts end-->
 		</div>
 		<!--CONTENT end-->
 	</div>
